--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,19 +4,39 @@ publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: ^3.5.4
+  sdk: ">=3.8.0 <4.0.0"
 
 dependencies:
-  accessibility_tools: ^2.3.0
+  accessibility_tools: ^2.6.0
   flutter:
     sdk: flutter
-  google_fonts: ^6.2.1
-  intl: ^0.20.2
+  intl: 0.20.2
+  alchemist: 0.12.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
+  build_runner: 2.4.15
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/
+
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: fonts/Montserrat-Regular.ttf
+        - asset: fonts/Montserrat-Italic.ttf
+          style: italic
+        - asset: fonts/Montserrat-Bold.ttf
+          weight: 700
+    - family: Ubuntu
+      fonts:
+        - asset: fonts/Ubuntu-Regular.ttf
+        - asset: fonts/Ubuntu-Italic.ttf
+          style: italic
+        - asset: fonts/Ubuntu-Bold.ttf
+          weight: 700
